# Blaze

./: .editorconfig  .gitignore  .gitmodules  Blaze.sln  CMakeLists.txt  LICENSE  README.md  build.cmd  build_webp.cmd  restore_modules.sh
Blaze/: AssemblyInfo.cpp  AssemblyInfo.cs  Blaze.cpp  Blaze.csproj  Blaze.vcxproj  Blaze.vcxproj.filters  OptimizationTools.cs  Program.cs  ProjectHandler.cs  Store.cs  audioprocessor.cpp  blazeapp.cpp  blazecore.cpp  blazecore.h  coreproc.cpp  cssprocessor.cpp  cssprocessor.h  globals.cpp  globals.h  globals.hpp  imageprocessor.cpp  imageprocessor.h  imgproc.cpp  imgproc.h  io.cpp  io.hpp  javascriptprocessor.cpp  json.cpp  jsproc.cpp  jsproc.h  libraries.cpp  logger.cpp  logger.h  logger.hpp  (+18 more)
Blaze.CLR/: AssemblyInfo.cpp  Blaze.CLR.cpp  Blaze.CLR.filters  Blaze.CLR.h  Blaze.CLR.vcxproj
Blaze.Middleware/: Blaze.Middleware.csproj  BlazeMiddleware.cs
Blaze.Middleware.ASP.Server/: Blaze.Middleware.ASP.Server.csproj  Component1.razor  ExampleJsInterop.cs
Blaze.Middleware.ASP.WebAssembly/: Blaze.Middleware.ASP.WebAssembly.csproj  Component1.razor  ExampleJsInterop.cs
Blaze.NET/: AssemblyInfo.cpp  Blaze.NET.cpp  Blaze.NET.vcxproj  Blaze.NET.vcxproj.filters  cpptocsharp.cpp  cpptocsharp.hpp  csharptocpp.cpp  csharptocpp.hpp  packages.config  pch.h  pch.hpp
Blaze.NativeBridge/: AssemblyInfo.cpp  Blaze.NativeBridge.cpp  Blaze.NativeBridge.h  Blaze.NativeBridge.vcxproj  Blaze.NativeBridge.vcxproj.filters  pch.h
Blaze.old/: Blaze.old.csproj  OptimizationTools.cs  Program.cs  SettingsHandler.cs  SolutionExtractor.cs  WebPWrapper.cs
(+51 files in other folders)
